--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
+    "@expo/webpack-config": "^19.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
-    "expo": "~48.0.18",
-    "expo-location": "~15.1.1",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.22",
+    "expo-location": "~16.1.0",
+    "expo-status-bar": "~1.6.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.1",
-    "react-native-web": "~0.18.10"
+    "react-native": "0.72.6",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
